SEO 최적화 경로수정

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
   <meta property="og:url" content="//zxc2zxc1.cafe24.com">
   <meta property="og:site_name" content="NCS 훈련생 웹퍼블리셔 웹디자인 하지수">
   <meta property="og:description" content="하지수의 포트폴리오 입니다">
-  <meta property="og:image" content="/Intro/img/kakao_thumb.jpg">
+  <meta property="og:image" content="//zxc2zxc1.cafe24.com/Intro/img/kakao_thumb.jpg">
 
   <title>웹 퍼블리셔 하지수의 포트폴리오입니다.</title>
   <!-- shortcut -->
